--- a/16-dimensionality_reduction.Rmd
+++ b/16-dimensionality_reduction.Rmd
@@ -165,12 +165,5 @@ rankings %>%
 
 ### Cohorte 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-  <summary> Chat de la reunión </summary>
-  
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/NI2zDORs1KA")`
+`r knitr::include_url("https://www.youtube.com/embed/AzjHnGJRxLY")`
