--- a/17-encoding_categorical_data.Rmd
+++ b/17-encoding_categorical_data.Rmd
@@ -19,12 +19,4 @@ Put the content of your second slide here.
 
 ### Cohorte 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-  <summary> Chat de la reunión </summary>
-  
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/SOOlsZaffRQ")`
