--- a/15rev-review_tools.Rmd
+++ b/15rev-review_tools.Rmd
@@ -5,12 +5,4 @@
 
 ### Cohorte 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-  <summary> Chat de la reunión </summary>
-  
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/v8aZTWPE--8")`
