--- a/20-ensemble_models.Rmd
+++ b/20-ensemble_models.Rmd
@@ -125,12 +125,4 @@ tree_frogs_test <-
 
 ### Cohorte 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-  <summary> Chat de la reunión </summary>
-  
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/n71f3ka5vLw")`
