--- a/05-spending_our_data.Rmd
+++ b/05-spending_our_data.Rmd
@@ -169,7 +169,7 @@ Example:
 ```{r heights-05}
 # data source: http://www.bristol.ac.uk/cmm/learning/mmsoftware/data-rev.html#oxboys
 child_heights <- read_delim(here::here("data/Oxboys.txt"), col_names = FALSE, delim = " ") %>%
-  set_names(c("child_id", "age_norm", "height", "measurement_id", "season"))
+  purrr::set_names(c("child_id", "age_norm", "height", "measurement_id", "season"))
 head(child_heights)
 ```
 
