--- a/12-model_tuning_and_the_dangers_of_overfitting.Rmd
+++ b/12-model_tuning_and_the_dangers_of_overfitting.Rmd
@@ -296,8 +296,8 @@ updated_params
 
 With the `finalize()` function, mtry was completed based on the number of predictors in the training dataset
 
-```{r pull_dials_object-12, echo = TRUE}
-updated_params %>% hardhat::extract_parameter_dials("mtry")
+```{r extract_parameter_dials-12, echo = TRUE}
+updated_params %>% extract_parameter_dials("mtry")
 ```
 
 ## What is next?
