--- a/13-grid_search.Rmd
+++ b/13-grid_search.Rmd
@@ -67,15 +67,15 @@ mlp_spec <-
   set_mode("regression")
 ```
 
-The argument **trace = 0** prevents extra logging of the training process. The `parameters()` function can extract the set of arguments with unknown values and set their `dials` objects. `pull_dials_object()` gives the current range of values.
+The argument **trace = 0** prevents extra logging of the training process. The `parameters()` function can extract the set of arguments with unknown values and set their `dials` objects. `extract_parameter_dials()` gives the current range of values.
 
 ```{r 13_mlp_param_hidden_units}
 mlp_param <- parameters(mlp_spec)
-mlp_param %>% pull_dials_object("hidden_units")
+mlp_param %>% extract_parameter_dials("hidden_units")
 ```
 
 ```{r 13_mlp_param_penalty}
-mlp_param %>% pull_dials_object("penalty")
+mlp_param %>% extract_parameter_dials("penalty")
 ```
 
 > For `penalty`, the random numbers are uniform on the log (base 10) scale. The values in the grid are in their natural units.
@@ -83,7 +83,7 @@ mlp_param %>% pull_dials_object("penalty")
 ![](https://media.giphy.com/media/iRBz7kiE3HsSA/giphy.gif)
 
 ```{r 13_mlp_param_epochs}
-mlp_param %>% pull_dials_object("epochs")
+mlp_param %>% extract_parameter_dials("epochs")
 ```
 
 ### Regular Grids
@@ -708,12 +708,19 @@ Grid search is computationally expensive, but thoughtful choices in the experime
 
 ### Cohorte 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
+`r knitr::include_url("https://www.youtube.com/embed/FZkIJ_a_Z5s")`
+`r knitr::include_url("https://www.youtube.com/embed/EbKYrLX0iug")`
 
 <details>
-  <summary> Chat de la reunión </summary>
-  
+<summary> Chat de la reunión </summary>
 ```
-LOG
+00:09:17	Diana García:	https://bookdown.org/ddiannae/curso-rdata/
+```
+</details>
+
+<details>
+<summary> Chat de la reunión </summary>
+```
+00:09:22	Roberto Villegas-Diaz:	Quizás es la misma definición que los niveles en un factor, es decir, el número de niveles es el número de valores únicos para ser usados como posible candidatos.
 ```
 </details>
