--- a/21-inferential_analysis.Rmd
+++ b/21-inferential_analysis.Rmd
@@ -31,7 +31,7 @@ best_results <- ranking %>%
   select(-top_10)
 
 race_top_results <- race %>%
-  filter(participation == "solo" || participation == "Solo") %>%
+  filter(participation == "solo" | participation == "Solo") %>%
   inner_join(best_results, by = "race_year_id") %>%
   mutate(avg_elevation_gain = elevation_gain / distance, avg_velocity = distance / time_in_seconds * 3600) %>%
   filter(distance > 0)
@@ -314,12 +314,5 @@ The key components are `bootstraps()` and `mutate + map` which give you quite a 
 
 ### Cohorte 1
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-  <summary> Chat de la reunión </summary>
-  
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/duAcf52LlVU")`
+`r knitr::include_url("https://www.youtube.com/embed/ofJuQ2jsY88")`
